Fix App layout and button being visible

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
-	padding: 10px;
+	min-height: 90vh;
+	padding: 5px;
+	outline: none;
 }
